[package]
name = "solana-http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.0"

# Solana-specific dependencies - using compatible versions
solana-sdk = "1.16"
spl-token = "4.0"
spl-associated-token-account = "2.2"
bs58 = "0.5"
base64 = "0.21"
ed25519-dalek = { version = "1.0", features = ["rand"] }
rand = "0.8" 
